--- a/app/views/HomesView.html
+++ b/app/views/HomesView.html
@@ -59,30 +59,25 @@
     </section>
 
     <section id="houseListings" class="row">
-        <!-- STUB car card template -->
-        <!-- <div class="col-12">
-        <div class="row bg-light rounded shadow border border-dark">
-          <div class="col-md-4 px-0">
-            <img
-              src="https://dealerinspire-image-library-prod.s3.us-east-1.amazonaws.com/images/I3BvjD2zREK0FinQCGoyqYrgkzVq3CNSOH2eNqik.jpg"
-              alt="" class="img-fluid rounded-start car-picture">
-          </div>
-          <div class="col-md-8 p-3">
-            <h2>2004 MAZDA MIATA</h2>
-            <h3>$300</h3>
-            <h3>Listed on 12/12/1200</h3>
-            <div class="d-flex">
-              <h4>Listed by SOME DUDE</h4>
-              <img class="creator-picture"
-                src="https://media0.giphy.com/media/7zApYc8tI0fpsR4Rny/giphy.gif?cid=ecf05e47rjwmcrd6jmfmjmncs5x74gigwtvzhd4hus6b24jt&ep=v1_gifs_related&rid=giphy.gif&ct=g"
-                alt="">
+        <!-- <div class="col-12 mb-3">
+            <div class="row bg-light rounded shadow border border-dark">
+                <div class="col-md-4 px-0">
+                    <img src="${this.imgUrl}" alt="House Image" class="img-fluid rounded-start car-picture">
+                </div>
+                <div class="col-md-8 p-3">
+                    <h3>Address......</h3>
+                    <h4>${this.price}</h4>
+                    <h5>${this.year}</h5>
+                    <p>${this.bedrooms} Bed <br>${this.bathrooms} Bath</p>
+                    <p>${this.description}</p>
+                    <div class="d-flex">
+                        <h4>Listed by ${this.owner}</h4>
+                    </div>
+                    <div>
+                        ${this.DeleteButton}
+                    </div>
+                </div>
             </div>
-            <p>ENGINE | COLOR</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea eius, sed quisquam eaque impedit voluptatem ex
-              pariatur commodi dolorum sapiente.</p>
-  
-          </div>
-        </div>
-      </div> -->
+        </div> -->
     </section>
 </div>
